Crashy .blend: Nasty Multires + Subsurf combo #29366

Closed
opened 2011-11-23 00:45:59 +01:00 by Pablo Vazquez · 8 comments
Member

%%%Attached example .blend that crashes on render (internal), just open and F12.
.
I've tried to replicate in a fresh mesh, since this happened on an old .blend I started working on again, but couldn't redo, the only way was appending this faulty object to a new .blend, still crashes there.

I know editing a multires mesh + having subsurf is very nasty, but the result I was achieving was quite cool :) at least could not crash.

Tried in very latest trunk, and in official 2.60.

Simple backtrace from my non-debug build:
http://www.pasteall.org/26670
%%%

%%%Attached example .blend that crashes on render (internal), just open and F12. . I've tried to replicate in a fresh mesh, since this happened on an old .blend I started working on again, but couldn't redo, the only way was appending this faulty object to a new .blend, still crashes there. I know editing a multires mesh + having subsurf is very nasty, but the result I was achieving was quite cool :) at least could not crash. Tried in very latest trunk, and in official 2.60. Simple backtrace from my non-debug build: http://www.pasteall.org/26670 %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%Noticed that if you:

  • Apply the Multires Modifier, crashes.

  • Apply first Multires, then Subsurf, also crashes.

  • Apply first Subsurf modifier, then Multires, it doesn't crash.

:D%%%

%%%Noticed that if you: - Apply the Multires Modifier, crashes. - Apply first Multires, then Subsurf, also crashes. - Apply *first* Subsurf modifier, then Multires, it doesn't crash. :D%%%

%%%Developer's note:
It's something wrong with DerivedMesh for which tanget layer is adding: some vertices has got NaN coordinates. Not sure if it's multires itself which produces such coordinated (didn't see anything bad with coordinates/data in multiresModifier_disp_run), but NaN appears in ccgDM_copyFinalVertArray.%%%

%%%Developer's note: It's something wrong with DerivedMesh for which tanget layer is adding: some vertices has got NaN coordinates. Not sure if it's multires itself which produces such coordinated (didn't see anything bad with coordinates/data in multiresModifier_disp_run), but NaN appears in ccgDM_copyFinalVertArray.%%%

%%%Forgot to mention, there's fiew edges in that mesh which aren't connected to any faces. If this edges are deleted before rendering, there's no crash.%%%

%%%Forgot to mention, there's fiew edges in that mesh which aren't connected to any faces. If this edges are deleted before rendering, there's no crash.%%%

%%%Made further investigation. NaN vertes appears in DerivedMesh after running ccgSubSurf_stitchFaces() from multiresModifier_disp_run(), so suppose problem is how this function works for meshes with edges not shared with any faces.
It's a bit tricky code to start tweaking without working on it before. Brecht, maybe it's simple for you now to fix this issue? Thanks.%%%

%%%Made further investigation. NaN vertes appears in DerivedMesh after running ccgSubSurf_stitchFaces() from multiresModifier_disp_run(), so suppose problem is how this function works for meshes with edges not shared with any faces. It's a bit tricky code to start tweaking without working on it before. Brecht, maybe it's simple for you now to fix this issue? Thanks.%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%great catch! thank you both for research and fix, cheers! :D%%%

%%%great catch! thank you both for research and fix, cheers! :D%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29366
No description provided.