Fix #29366: multires crash with meshes that had verts/edges not connected to any face.